implementing US0002 - Discente